@@ -1,10 +1,10 @@
-bin_PROGRAMS = client
+bin_PROGRAMS = rainbrurpg-client
 
 headers = Logger.hpp GameEngine.hpp
 
 sources = main.cpp GameEngine.cpp
 
-client_SOURCES = $(headers) $(sources)
+rainbrurpg_client_SOURCES = $(headers) $(sources)
 
-client_CPPFLAGS = $(DEPS_CFLAGS)
-client_LDADD = $(DEPS_LIBS)
+rainbrurpg_client_CPPFLAGS = $(DEPS_CFLAGS)
+rainbrurpg_client_LDADD = $(DEPS_LIBS)
