@@ -3,6 +3,7 @@ Render System=OpenGL Rendering Subsystem
 [OpenGL Rendering Subsystem]
 Display Frequency=85 MHz
 FSAA=0
+Fixed Pipeline Enabled=Yes
 Full Screen=No
 RTT Preferred Mode=FBO
 VSync=No
