@@ -6,4 +6,5 @@
 [General]
 Zip=../../rainbrurpg/media/packs/OgreCore.zip
 Zip=../../rainbrurpg/media/packs/dragon.zip
+Zip=~/ogre_src_v1-8-1/Samples/Media/packs/dragon.zip
 FileSystem=./
