@@ -1,3 +1,7 @@
+2013-04-19  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/plugins.cfg: fix path to plugins to make the window open.
+
 2013-01-07  Jérôme Pasquier  <rainbru@free.fr>
 
 	* uses src/main.cpp (main): uses rainbrurpg-logger.
